--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+  <link rel="stylesheet" href="https://nikas.com.np/cascadelib/center.css">
+  <meta charset="UTF-8">
+  <meta http-quiv="X-UA-Compatible" content="IE-edge">
+  <title>DEMO</title>
+</head>
 <body>
 
 <h1>My First Heading</h1>
