--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<h1>Hola Luci</h1>
+<p>Esta es mi primera pagina web en la web</p>
+<p>150 me salio el chiquito</p>
 
 </body>
 </html>
